@@ -568,6 +568,8 @@ test_checkUnitTests <- function()
     checkTrue(length(msg_seq) == 1)
     msg_eda <- BiocCheck:::checkExternalData(Rdir)
     checkTrue(length(msg_eda) == 4)
+    msg_dl <- BiocCheck:::checkOnAttachLoadCalls(Rdir)
+    checkTrue(length(msg_dl) == 2)
     avail_pkgs <- BiocManager::available()
     msg_sc <- BiocCheck:::checkSingleColon(Rdir, avail_pkgs)
     testval <- ifelse("BiocCheck" %in% avail_pkgs, 1, 0)
